--- a/src/style/main.css
+++ b/src/style/main.css
@@ -81,6 +81,13 @@ body {
   -webkit-animation: spin 1.5s linear infinite;
   animation: spin 1.5s linear infinite;
 }
+p#loaderText {
+  position: absolute;
+  margin-left: -40px;
+  top: 50%;
+  left: 50%;
+  color: #ffffff;
+}
 @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
